--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="viewport" content="width=320px">
   <meta name="viewport" content="height=device-height">
+  <link rel="apple-touch-icon" href="icone.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="icone.png">
+<link rel="apple-touch-icon" sizes="120x120" href="icone.png">
+<link rel="apple-touch-icon" sizes="152x152" href="icone.png">
+< link rel="shortcut icon" href="/assets/corona.ico" type="image/x-icon" / >
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
