--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   <link rel="apple-touch-icon" sizes="76x76" href="icone.png">
 <link rel="apple-touch-icon" sizes="120x120" href="icone.png">
 <link rel="apple-touch-icon" sizes="152x152" href="icone.png">
-< link rel="shortcut icon" href="/assets/corona.ico" type="image/x-icon" / >
+<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
