--- a/app/views/corona/index.html.erb
+++ b/app/views/corona/index.html.erb
@@ -5794,7 +5794,7 @@ html, body { font-family: "Roboto", sans-serif; color: #50658e; font-size: 16px;
                     <div class="nk-footer-bottom">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <p class="nk-copyright">&copy; 2020 COVID-19 Feito por Leandro Sobral dos Santos, Gabriela Toledo Prado e Gabryel Justino Wapnyk.</p>
+                                <p class="nk-copyright">&copy; 2020 COVID-19 Feito por Leandro Sobral dos Santos, Gabriela Toledo Prado, Gabryel Justino Wapnyk, Eryck A. Moreira F da Silva, Márcio Tadeu Baptistão, Gabriel Fantes Dutra e Lucas Lima de Almeida</p>
                             </div><!-- .col -->
                            
                                 </div>
